Port mod setup to Forge 1.20.1